[project]
name = "maps"
version = "0.1.0"
description = ""
authors = [{ name = "one-zero-eight" }]
urls = { homepage = "https://t.me/one_zero_eight" }
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "joserfc>=1.6.5",
    "colorlog>=6.10.1",
    "cryptography>=48.0.0",
    "fastapi>=0.136.1",
    "fastapi-swagger>=0.4.49",
    "gunicorn>=26.0.0",
    "prek>=0.3.13",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "rapidfuzz>=3.14.5",
    "ruff>=0.15.12",
    "uvicorn>=0.46.0",
]

[tool.ruff]
line-length = 120
lint.extend-select = ["I", "UP", "PL"]
lint.extend-ignore = ["PLC0415", "PLR"]
target-version = "py313"
